# geospatial-studio

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  .signing-test  404.html  CODEOWNERS  CONTRIBUTING.md  Dockerfile.operator  Dockerfile.operator.local  README.md  bootstrap.sh  build-studio-operators.sh  common_functions.sh  deploy_studio_cluster.sh  deploy_studio_k8s.sh  deploy_studio_lima.sh  deploy_studio_local.sh  deploy_studio_nvkind.sh  deploy_studio_ocp.sh  geostudio  ibm_storage_plugin.sh  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml  uninstall.sh
api-reference/: index.html
architecture_and_requirements/: index.html
dataset-factory/: index.html
dataset-factory-service/: index.html
deployment-docs/: detailed_deployment_cluster.md  detailed_deployment_local.md
deployment-scripts/: add-sandbox-models.sh  admin-role-for-namespace.sh  admin-role-for-user.sh  crc-hosts-modifier-daemonset.yaml  create-namespace.sh  create_buckets.py  create_local_storage_class.yaml  create_postgres_local_pvc.yaml  create_studio_dbs.py  deploy_pipelines.sh  deploy_studio.sh  dry_run_deploy_studio.sh  geoserver-deployment.yaml  install-postgres.sh  keycloak-deployment.yaml  list_bucket_contents.py  localize_config.sh  merge-env-files.py  minio-deployment-crc.yaml  minio-deployment.yaml  minio-openssl.conf  populate-buckets-with-auxiliary-data.sh  remove-pipeline-gpu.py  setup-keycloak.sh  setup-workspace-env.sh  setup_geoserver.sh  update-deployment-template.py  update-keycloak-deployment.py  (+4 more)
(+433 files in other folders)
