[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geospatial-studio"
description = ''
readme = "README.md"
requires-python = ">=3.8"
keywords = []
version = "1.0"
authors = [
  { name = "IBM Geospatial Exploration and Orchestration Studio Team", email = "watsonxgeo@ibm.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "mkdocs",
  "mkdocs-material",
  "mkdocs-video",
  "mkdocs-glightbox",
  "mkdocs-markdownextradata-plugin",
  "mkdocs-jupyter>=0.24.0,<0.25.0",
  "mkdocs-literate-nav",
  "mkdocs-git-revision-date-localized-plugin",
  "mkdocs-swagger-ui-tag"
]


[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
serve-workshop = "cd workshop && mkdocs serve -a 127.0.0.1:8001 {args}"
build-workshop = "cd workshop && mkdocs build {args}"
serve = "mkdocs serve {args}"
build = "mkdocs build {args}"

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.build.targets.wheel]
packages = ["docs/geospatial-studio-docs/site"]

